<resources>
    <string name="app_name">LifeSimulator</string>
    <string name="button_start">start</string>
    <string name="button_stop">stop</string>
    <string name="button_save">save</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="signup_password">Password</string>
    <string name="return_">return</string>
    <string name="signup_re_password">Enter Password Again</string>
    <string name="action_sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_not_registered_email">This email address is not registered</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="app_name2">Achievements Demo</string>
    <string name="a_name_placeholder">Achievement Name</string>
    <string name="a_desc_placeholder">Achievement Description</string>

    <!-- Database -->
    <string name="DB_NAME">GameData</string>

    <!-- Achievements table -->
    <string name="A_TABLE_NAME">achievements</string>
    <string name="A_COL_ID">_id</string>
    <string name="A_COL_NAME">name</string>
    <string name="A_COL_DESCRIPTION">description</string>
    <string name="A_COL_ICON">icon</string>
    <string name="A_COL_EARNED">earned</string>
    <string name="user_profile">User Profile</string>

    <!-- User profile page -->
    <string name="back">Back</string>
    <string name="achievements_label">Achievements:</string>
</resources>
